RESOLVED FIXED29496
[GTK] Sometimes crashes when a page is destroyed/loads another URL while playing video
https://bugs.webkit.org/show_bug.cgi?id=29496
Summary [GTK] Sometimes crashes when a page is destroyed/loads another URL while play...
Gustavo Noronha (kov)
Reported 2009-09-18 10:53:33 PDT
I am using http://limi.net/articles/firefox-3.7-4.0-design-directions/ to test. I click the very bottom/left corner to start the video playback, then click reload. Rinse and repeat 'till I get a crash. (gdb) bt full #0 webkit_video_sink_idle_func (data=0x12abc80) at ../WebCore/platform/graphics/gtk/VideoSinkGStreamer.cpp:108 sink = 0x12abc80 priv = 0xaaaaaaaaaaaaaaaa buffer = <value optimized out> src = <value optimized out> cr = <value optimized out> #1 0x00007ffff2ebc21a in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0 No symbol table info available. #2 0x00007ffff2ebfa78 in ?? () from /usr/lib/libglib-2.0.so.0 No symbol table info available. #3 0x00007ffff2ebff4d in g_main_loop_run () from /usr/lib/libglib-2.0.so.0 No symbol table info available. #4 0x00007ffff4e04be7 in gtk_main () from /usr/lib/libgtk-x11-2.0.so.0 No symbol table info available. #5 0x000000000043293e in main (argc=1, argv=0x7fffffffdc58) at /tmp/buildd/epiphany-webkit-2.27.92/src/ephy-main.c:784 option_context = <value optimized out> option_group = <value optimized out> proxy = <value optimized out> error = 0x0 user_time = 285348661
Attachments
proposed fix (3.46 KB, patch)
2009-09-18 14:49 PDT, Gustavo Noronha (kov)
gustavo: commit-queue-
Gustavo Noronha (kov)
Comment 1 2009-09-18 10:56:39 PDT
Zan told me on IRC this is probably the same thing that is causing media/video-seekable.html to crash.
Gustavo Noronha (kov)
Comment 2 2009-09-18 14:49:30 PDT
Created attachment 39789 [details] proposed fix This is a bit hacky, but a real fix requires a bigger rework of the code that I am unable to do right now. Since it's a crash, I'd rather plug it quickly, and refactor the media player later.
Xan Lopez
Comment 3 2009-09-20 13:50:28 PDT
Comment on attachment 39789 [details] proposed fix OK, r=me
Gustavo Noronha (kov)
Comment 4 2009-09-20 18:23:41 PDT
Thanks, landed as r48571.
Eric Seidel (no email)
Comment 5 2009-09-21 13:16:41 PDT
Comment on attachment 39789 [details] proposed fix Clearing review flag, since according to the above comment this was reviewed and landed already. :(
Jan Alonzo
Comment 6 2009-09-21 13:20:39 PDT
Reopening to remind us that this needs a "real fix".
Gustavo Noronha (kov)
Comment 7 2009-10-09 13:19:51 PDT
Real fix landed as r49401.
Note You need to log in before you can comment on or make changes to this bug.